[package]
name = "devela_depend"
description = "Optional external dependencies for `devela`."
version = "0.2.0"
edition = "2021"
# sync with readme & .github/workflows/check.yml
rust-version = "1.72.1" # required by: hashbrown: ahash
authors = ["José Luis Cruz <joseluis@andamira.net>"]
repository = "https://github.com/andamira/devela_depend"
documentation = "https://docs.rs/devela_depend"
license = "MIT OR Apache-2.0"
include = [
	"/src/**/*.rs",
	"/src/**/*.md",
	"/Cargo.toml",
	"/README.md",
	"/LICENSE-*",
]
categories = ["development-tools", "rust-patterns", "no-std::no-alloc"]
keywords = []
publish = true

[features]

#* miscellaneous features *#

# default = []

# enables the most complete version of the documentation:
docsrs = ["nightly", "all", "std", "unsafe"]


#* environment features *

std = [ # disables `no_std` compatibility and enables `std` functionality
	"alloc",
	"atomic?/std", "bytemuck?/extern_crate_std",
]
alloc = [ # enables `alloc` functionality
	"bytemuck?/extern_crate_alloc",
]
no_std = [ # enables functionality incompatible with or substitute of `std`
]


#* module features *

all = [ # enables all the external dependencies
	"atomic",
	"az",
	"bytemuck",
	"const-str",
	"hashbrown",
	"libm",
	"memchr",
	"portable-atomic",
	"unicode-segmentation",
	"unicode-width",
	"wide",
]


#* safety features *#

unsafe = [] # enables `unsafe` features in this crate
safe = [] # forbids `unsafe` in this crate


#* nightly features *#

nightly = []


# ------------------------------------------------------------------------------

[dependencies]
# These optional dependencies must copied as `devela` optional dependencies too.

az = { version = "1.2.1", default-features = false, optional = true }
const-str = { version = "0.5.6", default-features = false, optional = true }
libm = { version = "0.2.8", default-features = false, optional = true }
memchr = { version = "2.7.1", default-features = false, optional = true }
unicode-segmentation = { version = "1.10.1", default-features = false, optional = true }
unicode-width = { version = "0.1.11", default-features = false, optional = true }
wide = { version = "0.7.15", optional = true, default-features = false }
[dependencies.atomic]
version = "0.6.0"
default-features = false
optional = true
features = ["fallback"]
[dependencies.bytemuck]
version = "1.14.0"
default-features = false
optional = true
features = ["align_offset", "min_const_generics", "must_cast", "zeroable_maybe_uninit"]
[dependencies.hashbrown]
version = "0.14.1"
default-features = false
optional = true
features = ["ahash", "inline-more"]
[dependencies.portable-atomic]
version = "1.4.3"
default-features = false
optional = true
features = ["fallback", "float"]


# ------------------------------------------------------------------------------

[package.metadata.docs.rs]
no-default-features = true
features = ["docsrs"]

[badges]
maintenance = { status = "experimental" }
