[package]
name = "devela_depend"
description = "Optional external dependencies for `devela`."
version = "0.4.0"
edition = "2021"
# sync with readme & .github/workflows/check.yml
rust-version = "1.72.1" # required by: hashbrown: ahash
authors = ["José Luis Cruz <joseluis@andamira.net>"]
repository = "https://github.com/andamira/devela_depend"
documentation = "https://docs.rs/devela_depend"
license = "MIT OR Apache-2.0"
include = [
	"/src/**/*.rs",
	"/src/**/*.md",
	"/Cargo.toml",
	"/README.md",
	"/LICENSE-*",
]
categories = ["development-tools", "rust-patterns", "no-std::no-alloc"]
keywords = []
publish = true


# ------------------------------------------------------------------------------
# Features are grouped in the following categories:
# - Miscellaneous
# - Environment
# - Module
# - Safety
# - Nightly
# - Dependency

[features]

#* miscellaneous features *#

# default = [] # no default features
# enables the most complete version of the documentation:
docsrs = ["nightly", "all", "std", "unsafe"]


#* environment features *

std = [ # disables `no_std` compatibility and enables `std` functionality
	"alloc",
	"atomic?/std", "bytemuck?/extern_crate_std", "memchr?/std", "rand_core?/std",
	"wide?/std",
]
alloc = [ # enables `alloc` functionality
	"bytemuck?/extern_crate_alloc", "memchr?/alloc", "rand_core?/alloc"
]
no_std = [ # enables functionality incompatible with or substitute of `std`
]


#* module features *

all = [ # enables all the external dependencies
	"atomic",
	"bytemuck",
	"const-str",
	"crossterm", "crossterm_events",
	"hashbrown",
	"libm",
	"memchr",
	"miniquad",
	"portable-atomic",
	"rand_core",
	"unicode-segmentation",
	"unicode-width",
	"wide",
]


#* safety features *#

unsafe = [] # enables `unsafe` features in this crate
safe = [] # forbids `unsafe` in this crate


#* nightly features *#

nightly = []


#* dependency features *#

crossterm_events = ["crossterm?/events"]
rand_core_getrandom = ["rand_core?/getrandom"]
rand_core_serde = ["rand_core?/serde"]


# ------------------------------------------------------------------------------

[dependencies]
# These optional dependencies must copied as `devela` optional dependencies too.

const-str = { version = "0.5.6", default-features = false, optional = true }
libm = { version = "0.2.8", default-features = false, optional = true }
memchr = { version = "2.7.1", default-features = false, optional = true }
miniquad = { version = "0.4.0-alpha.10", default-features = false, optional = true }
rand_core = { version = "0.6.4", default-features = false, optional = true }
unicode-segmentation = { version = "1.10.1", default-features = false, optional = true }
unicode-width = { version = "0.1.11", default-features = false, optional = true }
wide = { version = "0.7.15", optional = true, default-features = false }
[dependencies.atomic]
version = "0.6.0"
optional = true
default-features = false
features = ["fallback"]
[dependencies.bytemuck]
version = "1.14.0"
optional = true
default-features = false
features = ["align_offset", "min_const_generics", "must_cast", "zeroable_maybe_uninit"]
[dependencies.crossterm]
version = "0.27.0"
optional = true
default-features = false
features = ["windows"]
[dependencies.hashbrown]
version = "0.14.1"
optional = true
default-features = false
features = ["ahash", "inline-more"]
[dependencies.portable-atomic]
version = "1.4.3"
optional = true
default-features = false
features = ["fallback", "float"]


# ------------------------------------------------------------------------------

[package.metadata.docs.rs]
no-default-features = true
features = ["docsrs"]

[badges]
maintenance = { status = "experimental" }
